# BoostPractice

./: .gitignore  CMakeLists.txt  README.md
HorizonCore/: CMakeLists.txt
HorizonCore/cpp/Private/: HorizonCore.cpp  HorizonLog.cpp
HorizonCore/cpp/Public/: HorizonCore.h  HorizonLog.h
LibCommonUtil/: CMakeLists.txt
cmake/: CommonSetting.cmake  LibBoostSetting.cmake  LibLink.cmake  LibSetting.cmake  LibSettingBoost.cmake
project_generator/: log.txt  win32.sh
shell/win32/: projectGenerate.sh
testbed/: CMakeLists.txt
testbed/cpp/Platform/standard/: main.cpp
testbed/cpp/Private/: GUIViewFSM.cpp  GUIViewFSM.h  SMSTest.h
testbed/cpp/Private/unit_test/: Test1.hpp  Test2.hpp
testbed/cpp/Public/: StateMachineContext.h  vending_machine.h
testbed/cpp/unit_test/: BoostLogTestCase.hpp  GUIViewFSMTestCase.hpp  Test1.hpp  Test2.hpp  main.cpp
